links now open new tab

--- a/public/index.html
+++ b/public/index.html
@@ -72,19 +72,19 @@
             <div class="portfolio">
                 <div class="projects" id="project1">
                     <div class="portContent"><h4>Memory Wars</h4>Game Design/Development, Object Oriented Programming, HTML5, CSS3, Javascript, jQuery.</div>
-                    <div class="portImage"><a href="/memory-wars.html"><img src="/img/memorywars.png" class="projectPictures"></a></div>
+                    <div class="portImage"><a href="/memory-wars.html" target="_blank"><img src="/img/memorywars.png" class="projectPictures"></a></div>
                 </div>
                 <div class="projects" id="project2">
                     <div class="portContent"><h4>Weather Map</h4>UI/UX Design, API, HTML5, CSS3, Javascript, jQuery.</div>
-                    <div class="portImage"><a href="/weather_map.html"><img src="/img/weathermap.png" class="projectPictures"></a></div>
+                    <div class="portImage"><a href="/weather_map.html" target="_blank"><img src="/img/weathermap.png" class="projectPictures"></a></div>
                 </div>
                 <div class="projects" id="project3">
                     <div class="portContent"><h4>Alien Artifact</h4>UI/UX Design, Photoshop, HTML5, CSS3, Javascript.</div>
-                    <div class="portImage"><a href="/calculator.html"><img src="/img/artifact.png" class="projectPictures"></a></div>
+                    <div class="portImage"><a href="/calculator.html" target="_blank"><img src="/img/artifact.png" class="projectPictures"></a></div>
                 </div>
                 <div class="projects" id="project4">
                     <div class="portContent"><h4>4U2Do</h4>HTML5, CSS3, Javascript.</div>
-                    <div class="portImage"><a href="/todolist2.html"><img src="/img/todo.png" class="projectPictures"></a></div>
+                    <div class="portImage"><a href="/todolist2.html" target="_blank"><img src="/img/todo.png" class="projectPictures"></a></div>
                 </div>
                 <div class="projects" id="project5">
                     <div class="portContent"><h4>Knotted Fates</h4>Game Design/Development, Level Design, Parallax Mapping, Photoshop</div>
