--- a/public/calculator.html
+++ b/public/calculator.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Calculator</title>
+        <title>Alien Artifact</title>
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link href="/css/calculator.css" rel="stylesheet">
 
